--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -80,6 +80,11 @@
                         <mat-label>Price</mat-label>
                         <input matInput type='number' formControlName='price'>
                     </mat-form-field>
+                    &nbsp;
+                    <mat-form-field appearance='outline'>
+                        <mat-label>Website Url</mat-label>
+                        <input matInput type='url' formControlName='url'>
+                    </mat-form-field>
                     <span class="row container-fluid">
                     <button 
                         class="col-auto"
