--- a/frontend/src/app/components/venue/venue.component.html
+++ b/frontend/src/app/components/venue/venue.component.html
@@ -23,7 +23,7 @@
       </span>
       <!-- quick actions -->
       <span class="col justify-content-end">
-        <button mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent'>
+        <button mat-icon-button matTooltip="share" matTooltipPosition='above' color='accent' [ngbPopover]="sharePop" [autoClose]="'outside'" placement="right">
           <mat-icon>
             share
           </mat-icon>
@@ -33,10 +33,11 @@
             map
           </mat-icon>
         </button>
-        <button mat-icon-button matTooltip="add to trip" matTooltipPosition='above' >
-          <mat-icon>
-            playlist_add
-          </mat-icon>
+        <button mat-icon-button matTooltip="add to trip" matTooltipPosition='above'>
+          <mat-icon mat-icon-button *ngIf='!isErr && !isLoading && !isSuccess' matTooltipPosition='above' [ngbPopover]="popContent" matTooltip="add to trip..." [autoClose]="'outside'">playlist_add</mat-icon>
+          <mat-spinner diameter='20' *ngIf='isLoading'></mat-spinner>
+          <mat-icon mat-icon-button class="text-success" *ngIf='isSuccess && !isLoading'>check</mat-icon>
+          <mat-icon mat-icon-button class="text-danger" *ngIf='isErr && !isLoading' matTooltip='an error occured'>error</mat-icon>
         </button>
       </span>
     </div>
@@ -109,3 +110,13 @@
 
   </mat-card-content>
 </mat-card>
+
+<!-- share -->
+<ng-template #sharePop> 
+  <app-share [UrlLink]='ogUrl'></app-share>
+</ng-template>
+
+<!-- add to trip -->
+<ng-template #popContent> 
+  <app-add-to-trip-popover (onSubmitEvent)='addToTrip($event)'></app-add-to-trip-popover>
+</ng-template>
