--- a/frontend/src/app/components/comment/comment.component.html
+++ b/frontend/src/app/components/comment/comment.component.html
@@ -6,6 +6,8 @@
     {{comment.likes.length}}
     <button mat-button (click)="replyBoolean()">REPLY</button>
     <button mat-button (click)="deleteTreeComment()">DELETE</button>
+    <button mat-button (click)="editTreeComment()">EDIT</button>
+    <button mat-button *ngIf="comment.edited && comment.edited.length> 0" (click)="showEdits()">edited</button>
   </div>
   <p *ngIf="comment.edited">edited</p>
 
