--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -8,7 +8,20 @@
         <div id='delete'>
             <button class='btn btn-danger' (click)='onDelete()'>Delete Account</button>
         </div>
-    </div>
+
+        <!-- profile picture -->
+        <form [formGroup]="form" (submit)="onSubmit()">
+            <div>
+                <button class='btn btn-danger' type="button" (click)="filePicker.click()">Change Profile Picture</button>
+                <input class='hidden' type="file" #filePicker (change)="onImagePicked($event)">
+            </div>
+        
+            <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+                <img [src]="imagePreview" [alt]="form.value.title">
+            </div>
+
+            <button *ngIf="form.valid" class='btn btn-danger' color="accent" type="submit">Submit</button>
+        </form>
 
     <!-- no wifi or user not found -->
     <div *ngIf='!User'>
