edit comment tree works

--- a/frontend/src/app/components/edit-comment/edit-comment.component.html
+++ b/frontend/src/app/components/edit-comment/edit-comment.component.html
@@ -8,7 +8,7 @@
 </form>
 
 <div *ngIf="data.displayEdits">
-  <div *ngFor="let edit of commentData.comment.edits">
-    {{edit}}
+  <div *ngFor="let edit of data.comment.comment.edited">
+    {{edit.edit}}: {{edit.date}}
   </div>
 </div>
