setup relevant posts for backend

--- a/frontend/src/app/components/comment/comment.component.html
+++ b/frontend/src/app/components/comment/comment.component.html
@@ -7,7 +7,7 @@
     <button mat-button (click)="replyBoolean()">REPLY</button>
     <button mat-button (click)="deleteTreeComment()">DELETE</button>
     <button mat-button (click)="editTreeComment()">EDIT</button>
-    <button mat-button *ngIf="comment.edited && comment.edited.length > 0" (click)="showEdits()">edited</button>
+    <button mat-button *ngIf="comment.edited && comment.edited.length > 0" (click)="showParentEdits()">edited</button>
   </div>
 
   <div *ngIf="replyField">
@@ -19,7 +19,7 @@
           <button mat-button >REPLY</button>
           <button mat-button (click)="deleteLeafComment(reply._id)">DELETE</button>
           <button mat-button (click)="editLeafComment(reply)">EDIT</button>
-
+          <button mat-button *ngIf="reply.edited && reply.edited.length > 0" (click)="showLeafEdits(reply)">edited</button>
         </div>
       </mat-card-header>
    </mat-card>
