binded submit to onSavePost()

--- a/frontend/src/app/components/add-post/add-post.component.html
+++ b/frontend/src/app/components/add-post/add-post.component.html
@@ -46,7 +46,7 @@
 
 
     <hr>
-    <button mat-raised-button color="accent" type="submit">Save Post</button>
+    <button mat-raised-button color="accent" type="submit" (click)='onSavePost()'>Save Post</button>
   </form>
 </mat-card>
 
