--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -50,7 +50,7 @@
 
   <div *ngIf='sessionState' class="nav-item topIcon">
     <div  id='icon' class="dropdown">
-      <img class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [src]="link" alt="Settings">
+      <img src="/frontend/src/assets/img/0c3b3adb1a7530892e55ef36d3be6cb8.png" class='img-thumbnail dropdown-toggle' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" alt="Settings">
       <div class="dropdown-menu dropdown-menu-right ">
         <button class="btn btn-secondary dropdown-item" routerLink='profile'>Profile</button>
         <app-logout class="dropdown-item"></app-logout>
