Co-authored-by: SimonWang <SimonTheWang@users.noreply.github.com>

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -33,9 +33,10 @@
         <div class="container row border-bottom"
             style="background-color: rgba(255, 255, 255, 1); padding-right: 1%; margin: 0; margin-right: 1%; min-width: 100%;">
             
-            <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
-            <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button>
+            <!-- <button mat-button *ngIf='selectedTab() != "/home"' class="nav-link col" routerLink='home'>Home</button>
+            <button mat-raised-button *ngIf='selectedTab() == "/home"' class="nav-link col" routerLink='home'>Home</button> -->
 
+            
             <button mat-button *ngIf='selectedTab() != "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
             <button mat-raised-button *ngIf='selectedTab() == "/mytrip"' class="nav-link col" routerLink='mytrip'>My Trip</button>
 
